# builds

cmake/: CMakeLists.txt  Readme.md  list.txt  main.cpp
cmake/src/MyTestSubProject1/: CMakeLists.txt  MyTestSubProject1Main.cpp
cmake/src/MyTestSubProject2/: CMakeLists.txt  MyTestSubProject2Main.cpp
cmake/tests/: CMakeLists.txt  test2.c  test4.c  test_hello.c
